# ted

./: .flake8  .gitignore  Pipfile  README.md  bot.py  launcher.py  noxfile.py  pyproject.toml  ready_responses.txt  settings.json  settings.json.example  setup.cfg
bot/: __init__.py
cogs/: config.py  fun.py  games.py  help.json  help.py  image.py  images.py  ping.py  rand.py  react.py  translate.py
cogs/8ball/: uncertain.txt
cogs/slap/: slaps.txt
lib/bot/: __init__.py
lib/db/: db.py
src/ted/: bot.py  settings.json.example
src/ted/cogs/: config.py  games.py  help.json  help.py  react.py  translate.py
src/ted/cogs/8ball/: negative.txt  positive.txt
src/ted/cogs/slap/: slaps.txt
tests/: conftest.py  test_help.py  test_ping.py  test_rand.py
